--- a/app/src/main/res/layout/content_main_map.xml
+++ b/app/src/main/res/layout/content_main_map.xml
@@ -10,5 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="pinpoint.ideamath.com.pinpoint.activities.MainMapActivity">
-
+    <FrameLayout
+        android:id="@+id/parentFrame"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"></FrameLayout>>
 </RelativeLayout>
