--- a/app/src/main/res/layout/content_main_map.xml
+++ b/app/src/main/res/layout/content_main_map.xml
@@ -14,5 +14,5 @@
         android:id="@+id/parentFrame"
         android:orientation="horizontal"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"></FrameLayout>>
+        android:layout_width="match_parent"></FrameLayout>
 </RelativeLayout>
