--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="view_bg">#b20e0f</color>
     <color name="white">#ffffff</color>
     <color name="btn_bg">#3e4a56</color>
+    <color name="hintText">#66ffffff</color>
+    <color name="green">#6ca439</color>
 </resources>
